src/CSS/style.css
/* HTML SETUP */

html, body {
  margin: 0px;
  background-color: #000000;
  width: 100%;
  height: 100%;
  scroll-behavior: smooth;
  font-family: "font-medium", Arial, Helvetica, sans-serif;
  font-size: 20px;
  color: #FFFFFF;
}

#container {
  margin: 0px;
  width: 100%;
  height: 100%;
  background-color: #000000;
  font-family: "font-medium", Arial, Helvetica, sans-serif;
  font-size: 20px;
  color: #FFFFFF;
}

/* CONTROL STYLES */

.style {
  margin: 20px;
  text-align: center;
  align-content: center;
}

.dark {
  background-color: #000000;
  color: #FFFFFF;
}

.border {
  border: 5px solid #8A00FF;
  border-radius: 5px;
}

.no-decoration {
  text-decoration: none;
}

.padding {
  padding: 20px;
}

.center {
  text-align: center;
  align-content: center;
}

.left {
  text-align: left;
  align-content: left;
}

.right {
  text-align: right;
  align-content: right;
}

/* CHAT CLASSES */

.chatBox {
  display: inline-block;
	background-color: #000000;
  width: 300px;
  height: 300px;
  overflow: scroll;
}

.chatOther {
  display: inline-block;
  padding: 5px;
  border-radius: 10px;
  border: none;
  background-color: #BF00FF;
  color: #000000;
}

.chat {
  display: inline-block;
  padding: 5px;
  border-radius: 10px;
  border: none;
  background-color: #8A00FF;
  color: #000000;
}

.chat-space {
  margin: 5px;
}

.stamp {
  font-size: 10px;
  color: #FFFFFF;
}

.stamp:empty {
  display: none;
}

.no-pointers {
  pointer-events: none;
}

/* CONTROL ITEMS */

button {
  margin-bottom: 20px;
  font-family: "font-bold", Arial, Helvetica, sans-serif;
  font-size: 20px;
  border: none;
  border-radius: 5px;
  background-color: #8A00FF;
  color: #000000;
  cursor: pointer;
}

button:hover {
  background-color: #BF00FF;
}

input {
  width: 150px;
  margin-bottom: 20px;
  font-size: 20px;
  border: 5px solid #8A00FF;
  border-radius: 5px;
  cursor: text;
  font-family: "font-bold", Arial, Helvetica, sans-serif;
}

input:hover, input:focus {
  border: 5px solid #BF00FF;
  outline: none;
}

/* ANIMATIONS */

.lds-dual-ring {
  display: inline-block;
  width: 80px;
  height: 80px;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 64px;
  height: 64px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid #8A00FF;
  border-color: #8A00FF transparent #8A00FF transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* SCROLLING */

::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-track {
  background: #000000; 
}
 
::-webkit-scrollbar-thumb {
  background: #8A00FF; 
}

::-webkit-scrollbar-thumb:hover {
  background: #BF00FF; 
}

::-webkit-scrollbar-corner {
  background-color: #000000;
}

